[package]
name = "introduction-to-git"
version = "0.1.0"
authors = ["Losti <lostforyou67a@gmail.com>"]
description = "this repository is an attempt to guide you to understand how git works and its basic commands. "
edition = "2021"
rust-version = "1.79.0"
readme = "README.md"
include = ["./src"]

[dependencies]

[[bin]]
name = "main"
path = "./src/main.rs"

[[bin]]
name = "checkout"
path = "./src/checkout/example.rs"

[[bin]]
name = "main-test"
path = "./src/test/main.test.rs"

[[bin]]
name = "other-test"
path = "./src/test/other.test.rs"